<resources>
    <string name="app_name">Nexu</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">    Hello blank fragment        </string>
    <string name="numero_publicacoes">      0                           </string>
    <string name="salvar_alteracoes">       Salvar alterações           </string>
    <string name="sucesso_alteracao">       Dados alterados com sucesso </string>
    <string name="buscar_usuarios">         Buscar usuários             </string>
    <string name="seguir">                  Seguir                      </string>
    <string name="seguindo">                Seguindo                    </string>
    <string name="carregando">              Carregando                  </string>
    <string name="nao_foi_possivel_abrir_a_galeria">Não foi possível abrir a galeria</string>
    <string name="nao_foi_possivel_abrir_a_camera">Não foi possivel abrir a câmera</string>
    <string name="filtros">Filtros</string>
    <string name="publicar">Publicar</string>
    <string name="nome_filtro">Nome filtro</string>
    <string name="perfil">Perfil</string>
    <string name="visualizar_publicacao">Visualizar publicacao</string>
    <string name="descricao">Descrição</string>
    <string name="recuperando_dados">Recuperando dados, aguarde!</string>
    <string name="salvando_publicacao">Salvando publicação</string>
    <string name="escreva_um_comentario">Escreva um comentário</string>
    <string name="comentarios">Comentários</string>
    <string name="insira_um_comentario">Insira um comentario antes de salvar.</string>
    <string name="comentario_salvo">Comentário salvo com sucesso</string>
    <string name="erro_salvar_comentario">Erro ao salvar o comentário</string>
</resources>